--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.google.com/specimen/Raleway');
+@import url('https://fonts.google.com/specimen/Open+Sans');
+
 :root {
 	--dark-blue: hsl(243, 87%, 12%);
 	--saturated-blue: hsl(238, 22%, 44%);
@@ -14,8 +17,11 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	overflow-x: hidden;
+	font-family: 'Open Sans', sans-serif;
 }
-
+a, h1, h2, button {
+	font-family: 'Raleway', sans-serif;
+}
 #navbar {
 	padding: 30px 0 30px 20px;
 }
@@ -28,7 +34,7 @@ body {
 }
 
 #banner {
-	padding: 30px;
+	padding: 30px 30px 80px 30px;
 }
 .banner-image img {
 	height: auto;
@@ -75,11 +81,12 @@ form .btn:hover {
 .productive-link a{
 	color: var(--moderate-cyan);
 	position: relative;
-	
+	padding-bottom: 5px;
 }
 .productive-link {
 	position: relative;
 	text-align: center;
+	padding-bottom: 30px;
 }
 .productive-link a::after {
 	content: "";
@@ -87,12 +94,13 @@ form .btn:hover {
 	width: 100%;
 	left: 0;
 	bottom: 0;
-	margin-top: 10px;
+	margin-top: 20px;
 	height: 2px;
 	background-color: var(--moderate-cyan);
 }
 .productive-link a:hover {
-
+  text-decoration: none;
+	filter: brightness(150%);
 }
 .founder-quote {
 	background-color: white;
