--- a/style.css
+++ b/style.css
@@ -176,6 +176,14 @@ form .btn:hover {
 	color: var(--bright-blue);
 	border: 1px solid var(--bright-blue);
 }
+@media screen and (max-width: 376px) {
+	#navbar {
+		padding: 30px 0;
+	}
+	.nav-links a {
+		padding: 0 10px 0 0;
+	}
+}
 @media screen and (min-width: 600px) {
 	.nav-links a {
 		padding: 0 30px;
